// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckBox renders with defaultProps 1`] = `
<label
  className="ax-checkbox ax-space--x2"
  onClick={undefined}
  title={undefined}
>
  <input
    checked={false}
    className="ax-checkbox__input"
    disabled={undefined}
    name={undefined}
    type="checkbox"
  />
  <span
    className="ax-checkbox__indicator"
  />
  <span
    className="ax-checkbox__label"
  >
    Lorem ipsum
  </span>
</label>
`;

exports[`CheckBox renders with disabled 1`] = `
<label
  className="ax-checkbox ax-checkbox--disabled ax-space--x2"
  onClick={undefined}
  title={undefined}
>
  <input
    checked={false}
    className="ax-checkbox__input"
    disabled={true}
    name={undefined}
    type="checkbox"
  />
  <span
    className="ax-checkbox__indicator"
  />
  <span
    className="ax-checkbox__label"
  >
    Lorem ipsum
  </span>
</label>
`;

exports[`CheckBox renders with indeterminate 1`] = `
<label
  className="ax-checkbox ax-checkbox--indeterminate ax-space--x2"
  onClick={undefined}
  title={undefined}
>
  <input
    checked={true}
    className="ax-checkbox__input"
    disabled={undefined}
    name={undefined}
    type="checkbox"
  />
  <span
    className="ax-checkbox__indicator"
  />
  <span
    className="ax-checkbox__label"
  >
    Lorem ipsum
  </span>
</label>
`;

exports[`CheckBox renders with indeterminate and checked 1`] = `
<label
  className="ax-checkbox ax-space--x2"
  onClick={undefined}
  title={undefined}
>
  <input
    checked={true}
    className="ax-checkbox__input"
    disabled={undefined}
    name={undefined}
    type="checkbox"
  />
  <span
    className="ax-checkbox__indicator"
  />
  <span
    className="ax-checkbox__label"
  >
    Lorem ipsum
  </span>
</label>
`;

exports[`CheckBox renders with invalid 1`] = `
<label
  className="ax-checkbox ax-checkbox--invalid ax-space--x2"
  onClick={undefined}
  title={undefined}
>
  <input
    checked={false}
    className="ax-checkbox__input"
    disabled={undefined}
    name={undefined}
    type="checkbox"
  />
  <span
    className="ax-checkbox__indicator"
  />
  <span
    className="ax-checkbox__label"
  >
    Lorem ipsum
  </span>
</label>
`;
